--- a/ui/clipboard-popup.html
+++ b/ui/clipboard-popup.html
@@ -9,6 +9,8 @@
         background: transparent;
       }
     </style>
+    <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="/src/tiptap.css">
   </head>
   <body>
     <div id="root"></div>
